# google-login-example

./: google-login.code-workspace
.codecatalyst/workflows/: Workflow_google-auth-example.yaml
apps/api/: Cargo.toml  session
apps/api/src/: config.rs  main.rs
apps/api/src/handlers/: client.json  client2.json  login_get.rs  login_post.rs  mod.rs
apps/api/src/handlers/login_post/: user_info.rs
apps/frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.vue  main.ts
apps/frontend/src/api/: api.ts  api_error.ts  api_response.ts  fix_casing.ts  index.ts
apps/frontend/src/api/forms/: login_form.ts
apps/frontend/src/components/: Welcome.vue
apps/frontend/src/pages/: HomePage.vue  LoginCallbackPage.vue  LoginCompletePage.vue
apps/frontend/src/router/: index.ts
apps/frontend/src/styles/: index.scss
apps/google-login/: Cargo.toml  data.json
apps/google-login/src/: config.rs  error.rs  lib.rs  oauth.rs  scope.rs
infra/cdk/: package-lock.json  package.json
infra/cdk/lib/: api-stack.ts  init-stack.ts  utils.ts
