[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.30.0"
axum = "0.6.20"
axum-aws-lambda = "0.5.0"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = "0.4.31"
config = "0.13.3"
dotenv = "0.15.0"
google-login = { path = "../google-login" }
lambda_http = { version = "0.8.1", default-features = false, features = [
  "apigw_http",
] }
lambda_runtime = "0.8.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls-tls",
  "native-tls-vendored",
] }
serde = { version = "1.0.185", features = ["derive"] }
serde_dynamo = { version = "4.2.5", features = ["aws-sdk-dynamodb+0_30"] }
serde_json = "1.0.105"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }
urlencoding = "2.1.3"
