[package]
name = "google-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oauth2 = "0.4.2"
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
